Dropdowns aligned correctly; buttons formatted; hooked up data rendering; hover animates axis palette

--- a/gui/client/Chart/style.less
+++ b/gui/client/Chart/style.less
@@ -70,15 +70,14 @@ overflow: hidden;
 
 #chart-options-targets {
   position: relative;
-<<<<<<< HEAD
 
   .target-option {
     float: left;
     position: relative;
-    left: -5px;
+    left: -6px;
     z-index: -1;
     /*width: 50px;*/
-    height: 20px;
+    height: 16px;
     background-color: #999;
     opacity: 0.9;
     margin: 1px 5px 0px 0px;
@@ -88,39 +87,35 @@ overflow: hidden;
     -webkit-border-radius: 4px;
     text-align: center;
   }
-=======
+
+  .droppable-active {
+    background-color: #ff0;
+  }
+
+  .droppable-hover {
+    background-color: #ff0;
+    border: 2px solid black;
+  }
+
+  .droppable-highlight {
+    background-color: #999;
+    border: 2px solid black;
+  }
+
+  .axis-picker-btn {
+    padding-right: 2px;
+    padding-left: 4px;
+  }
 }
 
-.target-option {
-  float: left;
-  /*width: 50px;
-  height: 25px;*/
-  background-color: #999;
-  opacity: 0.9;
-  margin: 5px;
-  padding: 5px;
-  border: 2px dashed black;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  text-align: center;
->>>>>>> 075e9cf9e4a18f59381990f410c057f7b9a728c9
-}
 
 .projectile-option {
   float: left;
-<<<<<<< HEAD
   /*width: 50px;*/
-  height: 20px;
+  height: 16px;
   background-color: black;
   margin: 5px;
-  padding: 2px;
-=======
-  /*width: 50px;
-  height: 25px;*/
-  background-color: black;
-  margin: 5px;
-  padding: 5px;
->>>>>>> 075e9cf9e4a18f59381990f410c057f7b9a728c9
+  padding: 0px 4px 4px 4px;
   border-radius: 4px;
   -webkit-border-radius: 4px;
   color: white;
@@ -132,16 +127,3 @@ overflow: hidden;
   cursor: move;
 }
 
-.droppable-active {
-  background-color: #ff0;
-}
-
-.droppable-hover {
-  background-color: #ff0;
-  border: 2px solid black;
-}
-
-.droppable-highlight {
-  background-color: #999;
-  border: 2px solid black;
-}
